投稿編集ページの変更

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -502,8 +502,8 @@
   margin: auto;
 }
 
-.ingredient-area {
-  margin-top: 15px;
+.edit-ingredient {
+  padding-top: 30px;
 }
 
 .ingredient input {
