--- a/app/views/users/_new.html.erb
+++ b/app/views/users/_new.html.erb
@@ -3,11 +3,11 @@
     <%= form_tag users_path do %>
       <div class="new-user">
         <span class="material-icons" id="signup-close">close</span>
-        <!-- <% @user.errors.full_messages.each do |message| %>
+        <% @user.errors.full_messages.each do |message| %>
           <div class="error-message">
             <%= message %>
           </div>
-        <% end %> -->
+        <% end %>
         <h1>pf_appへようこそ！</h1>
         <p class="account-creation">アカウントを作成</p>
         <div class="redistration-content">
