エラーメッセージを表示する

--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <h2 class="edit-recipe-title">レシピを編集</h2>
     <%= form_with url: update_post_path do |f| %>
-      <%#= render 'shared/error_messages' %>
+      <%= render 'shared/error_messages' %>
       <div class="edit-post">
         <div class="edit-form">
           <div class="post-cooking_name posts-edit-content posts-new-content">
