レスポンシブ対応にする

--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -12,7 +12,7 @@
     <div class="login-buttons">
       <%= link_to "新規登録", new_user_path, class:"signup-btn" %>
       <%= link_to "ログイン", login_path, class:"login-btn" %>
-      <%= link_to "ゲストログイン", guest_sessions_path, method: :post %>
+      <%= link_to "ゲストログイン", guest_sessions_path, method: :post, class: "guest-btn" %>
     </div>
   </div>
 </div>
