--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -42,12 +42,6 @@ header {
   z-index: 10;
 }
 
-.overlay.show {
-  width: 260px;
-  opacity: 1;
-  pointer-events: auto;
-}
-
 .overlay #close {
   position: absolute;
   top: 16px;
@@ -68,21 +62,8 @@ header {
   transition: opacity .3s, transform .3s;
 }
 
-.overlay a {
-  text-decoration: none;
-  color: black;
-  font-size: 18px;
-}
-
 #lo-menu.side {
   display: none;
-}
-
-#search-open {
-  text-decoration: none;
-  color: black;
-  font-size: 18px;
-  cursor: pointer;
 }
 
 #search-close {
@@ -182,6 +163,112 @@ header {
   pointer-events: auto;
 }
 // ハンバーガーメニューここまで=========================================================
+/* common */
+/* small screen */
+@media (max-width: 799px) {
+  .top-main {
+    height: 800px;
+    width: 100%;
+    background-color: #faf5f0;
+  }
+
+  .top-image {
+    display: block;
+  }
+
+  .top-image-1 {
+    width: 100%;
+  }
+
+  .top-image-2 {
+    display: none;
+  }
+
+  .login-buttons a {
+    display: block;
+    margin-bottom: 30px;
+    text-decoration: none;
+    color: black;
+    font-size: 25px;
+    text-align: center;
+  }
+
+  .overlay.show {
+    width: 100%;
+    opacity: 1;
+    pointer-events: auto;
+  }
+
+  .overlay a {
+    text-decoration: none;
+    color: black;
+    font-size: 22px;
+  }
+
+  #search-open {
+    text-decoration: none;
+    color: black;
+    font-size: 24px;
+    cursor: pointer;
+  }
+}
+
+/* large screen */
+@media (min-width: 800px) {
+  .top-main {
+    height: 800px;
+    background-color: #faf5f0;
+  }
+
+  .top-image {
+    width: 100%;
+    display: flex;
+  }
+
+  .top-image-1 {
+    height: 500px;
+    width: 720px;
+  }
+
+  .top-image-2 {
+    display: block;
+  }
+
+  .login-buttons a {
+    display: inline-block;
+    text-decoration: none;
+    color: black;
+    font-size: 20px;
+  }
+
+  .signup-btn {
+    margin-right: 70px;
+    margin-left: 500px;
+  }
+  
+  .login-btn {
+    padding-right: 70px;
+  }
+
+  .overlay.show {
+    width: 260px;
+    opacity: 1;
+    pointer-events: auto;
+  }
+
+  .overlay a {
+    text-decoration: none;
+    color: black;
+    font-size: 18px;
+  }
+
+  #search-open {
+    text-decoration: none;
+    color: black;
+    font-size: 18px;
+    cursor: pointer;
+  }
+}
 
 .header-logo {
   float: left;
@@ -250,21 +337,6 @@ body {
   margin: 0;
 }
 
-.top-main {
-  height: 800px;
-  background-color: #faf5f0;
-}
-
-.top-image {
-  width: 100%;
-  display: flex;
-}
-
-.top-image-1 {
-  height: 500px;
-  width: 720px;
-}
-
 .top-image-2 {
   height: 500px;
   width: 720px;
@@ -282,21 +354,6 @@ body {
 
 .login-buttons {
   margin-top: 50px;
-}
-
-.login-buttons a {
-  text-decoration: none;
-  color: black;
-  font-size: 20px;
-}
-
-.signup-btn {
-  margin-right: 70px;
-  margin-left: 500px;
-}
-
-.login-btn {
-  padding-right: 70px;
 }
 
 .flash {
