--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -19,13 +19,6 @@ header {
   line-height: 60px;
 }
 
-.menu-bar #open-menu {
-  font-size: 32px;
-  line-height: 60px;
-  margin-left: 30px;
-  cursor: pointer;
-}
-
 .overlay {
   width: 260px;
   position: fixed;
@@ -211,6 +204,28 @@ header {
     font-size: 24px;
     cursor: pointer;
   }
+
+  .login-contents-text {
+    text-align: center;
+    font-size: 31px;
+  }
+
+  .menu-bar #open-menu {
+    font-size: 32px;
+    line-height: 60px;
+    margin-left: 10px;
+    cursor: pointer;
+  }
+
+  .header-title {
+    color: black;
+    text-decoration: none;
+    font-family: serif;
+  }
+
+  .header-list a {
+    display: none;
+  }
 }
 
 /* large screen */
@@ -268,6 +283,25 @@ header {
     font-size: 18px;
     cursor: pointer;
   }
+
+  .login-contents-text {
+    text-align: center;
+    font-size: 37px;
+  }
+
+  .menu-bar #open-menu {
+    font-size: 32px;
+    line-height: 60px;
+    margin-left: 30px;
+    cursor: pointer;
+  }
+
+  .header-title {
+    padding-left: 20px;
+    color: black;
+    text-decoration: none;
+    font-family: serif;
+  }
 }
 
 .header-logo {
@@ -275,13 +309,6 @@ header {
   line-height: 60px;
   font-size: 38px;
   margin-left: 9px;
-}
-
-.header-title {
-  padding-left: 20px;
-  color: black;
-  text-decoration: none;
-  font-family: serif;
 }
 
 .header-title:hover {
@@ -345,11 +372,6 @@ body {
 .login-contents {
   height: 200px;
   margin-top: 67px;
-}
-
-.login-contents-text {
-  text-align: center;
-  font-size: 37px;
 }
 
 .login-buttons {
