--- a/app/views/posts/_ingredient_fields.html.erb
+++ b/app/views/posts/_ingredient_fields.html.erb
@@ -6,6 +6,8 @@
       <%= f.select :unit, [["大さじ", "大さじ"], ["小さじ", "小さじ"],
               ["ml", "ml"], ["cc","cc"], ["グラム", "グラム"], ["個", "個"], ["パック", "パック"], ["枚", "枚"],
               ["少々", "少々"], ["ひと摘み", "ひと摘み"]], include_blank: "未選択" %>
+    </div>
+    <div class="delete-form-button">
       <span class="delete-form-btn">
         削除する
       </span>
