--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -137,18 +137,6 @@ header {
   transition-delay: .3s;
 }
 
-.menu-cover {
-  position: fixed;
-  height: 100%;
-  width: 100%;
-  top: 0;
-  left: 0;
-  z-index: 8;
-  background: rgba(0,0,0,.7);
-  opacity: 0;
-  pointer-events: none;
-}
-
 .menu-cover.cover {
   height: 100%;
   width: 100%;
@@ -223,6 +211,10 @@ header {
   }
 
   .header-list a {
+    display: none;
+  }
+
+  .menu-cover {
     display: none;
   }
 }
@@ -300,6 +292,18 @@ header {
     color: black;
     text-decoration: none;
     font-family: serif;
+  }
+
+  .menu-cover {
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 8;
+    background: rgba(0,0,0,.7);
+    opacity: 0;
+    pointer-events: none;
   }
 }
 
