--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -59,13 +59,6 @@ header {
   display: none;
 }
 
-#search-close {
-  cursor: pointer;
-  font-size: 24px;
-  margin-top: 10px;
-  margin-left: 516px;
-}
-
 #search-open:hover {
   color: #104574;
   text-decoration: underline solid black;
@@ -85,31 +78,8 @@ header {
   display: none;
 }
 
-#search-form {
-  background: white;
-  height: auto;
-  width: 565px;
-  padding-bottom: 62px;
-  text-align: center;
-  border-radius: 12px;
-  border: 1px solid #80808040;
-  position: absolute;
-  top: 120px;
-  right: 0;
-  left: 0;
-  margin: 0 auto;
-  z-index: 10;
-}
-
 #search-form h1 {
   margin-bottom: 30px;
-}
-
-.search-for {
-  height: 36px;
-  width: 400px;
-  border-radius: 3px;
-  border: 1px solid black;
 }
 
 .search-btn {
@@ -226,6 +196,36 @@ header {
   .menu-cover {
     display: none;
   }
+
+  #search-form {
+    background: white;
+    height: auto;
+    width: 95%;
+    padding-bottom: 62px;
+    text-align: center;
+    border-radius: 12px;
+    border: 1px solid #80808040;
+    position: absolute;
+    top: 120px;
+    right: 0;
+    left: 0;
+    margin: 0 auto;
+    z-index: 10;
+  }
+
+  .search-for {
+    height: 36px;
+    width: 77%;
+    border-radius: 3px;
+    border: 1px solid black;
+  }
+
+  #search-close {
+    cursor: pointer;
+    font-size: 24px;
+    margin-top: 10px;
+    margin-left: 310px;
+  }
 }
 
 /* large screen */
@@ -321,6 +321,36 @@ header {
     margin-top: 5px;
     margin-left: 1052px;
     border-radius: 6px;
+  }
+
+  #search-form {
+    background: white;
+    height: auto;
+    width: 565px;
+    padding-bottom: 62px;
+    text-align: center;
+    border-radius: 12px;
+    border: 1px solid #80808040;
+    position: absolute;
+    top: 120px;
+    right: 0;
+    left: 0;
+    margin: 0 auto;
+    z-index: 10;
+  }
+
+  .search-for {
+    height: 36px;
+    width: 400px;
+    border-radius: 3px;
+    border: 1px solid black;
+  }
+
+  #search-close {
+    cursor: pointer;
+    font-size: 24px;
+    margin-top: 10px;
+    margin-left: 516px;
   }
 }
 
