--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -193,6 +193,10 @@ header {
     border-radius: 6px;
   }
 
+  #signup {
+    display: none;
+  }
+
   .menu-cover {
     display: none;
   }
@@ -315,12 +319,25 @@ header {
     pointer-events: none;
   }
 
+  .header-list {
+    margin-left: auto;
+    margin-right: 32px;
+  }
+
   .header-user-image {
     height: 50px;
     width: 50px;
     margin-top: 5px;
-    margin-left: 1052px;
     border-radius: 6px;
+  }
+
+  #signup {
+    display: block;
+    margin-top: 20px;
+  }
+
+  #signup a {
+    color: black;
   }
 
   #search-form {
