--- a/app/views/users/_recipes_stat.html.erb
+++ b/app/views/users/_recipes_stat.html.erb
@@ -12,7 +12,7 @@
     <%= @user.followers.count %>
   </strong>
 </a>
-<a class="user-stat" class="like" href="<%= likes_user_path(@user) %>">
+<a class="like-user-stat" class="like" href="<%= likes_user_path(@user) %>">
   いいね
   <strong id="likes" class="stat">
     <%= @user.likes.count %>
