--- a/app/views/users/likes.html.erb
+++ b/app/views/users/likes.html.erb
@@ -23,7 +23,9 @@
           <% recipe = Recipe.find_by(id: like.recipe_id) %>
           <div class="col-lg-3 col-md-6 mb-4">
             <div class="likes-center">
-              <%= image_tag recipe.cooking_image.url %>
+              <%= link_to post_path(recipe.id) do %>
+                <%= image_tag recipe.cooking_image.url %>
+              <% end %>
             </div>
             <div class="likes-bottom">
               <%= link_to recipe.cooking_name, post_path(recipe.id) %>
@@ -38,28 +40,3 @@
     </div>
   </div>
 </div>
-
-<!-- <div class="user-likes-main">
-  <div class="container">
-    <div class="likes-title">
-      <h1>いいね！した投稿</h1>
-    </div>
-    <div class="likes-items">
-      <% @likes.each do |like| %>
-        <% recipe = Recipe.find_by(id: like.recipe_id) %>
-        <div class="likes-item">
-          <div class="likes-top">
-            <img src="<%= "/user_images/#{recipe.user.image}" %>">
-            <%= link_to recipe.user.user_name, user_path(recipe.user.id), class:"likes_user_name" %>
-          </div>
-          <div class="likes-center">
-            <img src="<%= "/cooking_images/#{recipe.cooking_image}" %>">
-          </div>
-          <div class="likes-bottom">
-            <%= link_to recipe.cooking_name, post_path(recipe.id) %>
-          </div>
-        </div>
-      <% end %>
-    </div>
-  </div>
-</div> -->
