--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,9 +10,11 @@
             <h2><%= @user.user_name %></h2>
             <%= render 'follow_form' if logged_in? %>
           </div>
-          <% if @user.id == @current_user.id %>
-            <%= link_to "ユーザー情報を編集", edit_user_path(@user.id), class:"user_edit_button" %>
-          <% end %>
+          <div class="user-edit-btn">
+            <% if @user.id == @current_user.id %>
+              <%= link_to "ユーザー情報を編集", edit_user_path(@user.id), class:"user_edit_button" %>
+            <% end %>
+          </div>
         </div>
         <div class="user-info">
           <%= render 'users/stats' %>
@@ -26,7 +28,9 @@
           <div class="col-lg-3 col-md-6 mb-4">
             <div class="cooking-image">
               <% if recipe.cooking_image.present? %>
-                <%= image_tag recipe.cooking_image.url %>
+                <%= link_to post_path(recipe.id) do %>
+                  <%= image_tag recipe.cooking_image.url %>
+                <% end %>
               <% else %>
                 <%= image_tag "cooking_default.png" %>
               <% end %>
