--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -44,9 +44,11 @@
                             <option value="枚">枚</option>
                             <option value="少々">少々</option>
                             <option value="ひと摘み">ひと摘み</option></select>
-                            <span class="delete-form-btn">
-                              削除する
-                            </span>
+                        </div>
+                        <div class="delete-form-button">
+                          <span class="delete-form-btn">
+                            削除する
+                          </span>
                         </div>
                       </div>
                     <% end %>
