--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -48,8 +48,9 @@
   }
 
   .user-image-name h2 {
-    width: 90px;
+    width: 80%;
     margin: 28px auto;
+    text-align: center;
   }
 
   .user-edit-btn {
@@ -145,6 +146,14 @@
     height: 274px;
     width: 100%;
     border-radius: 20px;
+  }
+
+  .follow-btn {
+    text-align: center;
+  }
+
+  .btn {
+    margin: 0;
   }
 }
 
@@ -266,6 +275,11 @@
     width: 200px;
     border-radius: 20px;
   }
+
+  .btn {
+    margin-top: 20px;
+    margin-left: 35px;
+  }
 }
 
 .user-info {
@@ -302,25 +316,36 @@
   margin-top: 20px;
 }
 
-.btn {
-  margin-top: 20px;
-  margin-left: 35px;
-}
-
 .user-show-search {
   width: 285px;
 }
 
 // edit====================================================================================
-.edit-user {
-  height: auto;
-  width: 655px;
-  margin: auto;
-  margin-top: 40px;
+@media (max-width: 799px) {
+  .edit-user {
+    height: auto;
+    width: 100%;
+    margin: auto;
+    margin-top: 40px;
+    overflow: hidden;
+  }
+
+  .edit-title {
+    margin: 0;
+  }
 }
 
-.edit-title {
-  margin: 50px 0;
+@media (min-width: 800px) {
+  .edit-user {
+    height: auto;
+    width: 655px;
+    margin: auto;
+    margin-top: 40px;
+  }
+
+  .edit-title {
+    margin: 50px 0;
+  }
 }
 
 .edit-user p {
