--- a/app/views/users/_follow.html.erb
+++ b/app/views/users/_follow.html.erb
@@ -1,4 +1,6 @@
 <%= form_for(set_current_user.active_relationships.build) do |f| %>
   <div><%= hidden_field_tag :followed_id, @user.id %></div>
-  <%= f.submit "フォロー", class:"btn btn_primary" %>
+  <div class="follow-btn">
+    <%= f.submit "フォロー", class:"btn btn_primary" %>
+  </div>
 <% end %>
