ingredientsのデータを追加するためのnewページを作成する

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -321,6 +321,12 @@
     overflow: hidden;
   }
 
+  .ingredients-new-main {
+    width: 100%;
+    background-color: #faf5f0;
+    overflow: hidden;
+  }
+
   .new-post {
     height: auto;
     width: 100%;
@@ -379,6 +385,10 @@
   }
 
   .posts-new-main {
+    background-color: #faf5f0;
+  }
+
+  .ingredients-new-main {
     background-color: #faf5f0;
   }
 
