ingredientsのnewページのスタイルを整える

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -337,6 +337,16 @@
     text-align: center
   }
 
+  .ingredients-new-post {
+    height: auto;
+    width: 100%;
+    margin: auto;
+    margin-bottom: 303px;
+    background-color: white;
+    border-radius: 15px;
+    text-align: center
+  }
+
   .start-message {
     margin: 20px 0 20px 0;
     font-size: 27px;
@@ -397,6 +407,16 @@
     width: 810px;
     margin: auto;
     margin-bottom: 85px;
+    background-color: white;
+    border-radius: 15px;
+    text-align: center
+  }
+
+  .ingredients-new-post {
+    height: auto;
+    width: 810px;
+    margin: auto;
+    margin-bottom: 258px;
     background-color: white;
     border-radius: 15px;
     text-align: center
