--- a/app/views/ingredients/new.html.erb
+++ b/app/views/ingredients/new.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <h2 class="start-message">材料を追加しよう！</h2>
     <%= form_with model: @recipe, url: posts_create_path, local: true do |f| %>
-      <div class="new-post">
+      <div class="ingredients-new-post">
         <%#= render 'shared/error_messages' %>
         <div class="new-post-form">
           <div class="post-new-ingredients posts-new-content">
